# patch-agent

./: .gitignore  MULTIAGENT_REVIEW.md  README.md  docker-compose.yml  prd-patch-project.md  shell.nix  stream-3-plan.md  stream-3.md
apps/backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.agent  moon.yml  patch_agno.py  pyproject.toml
apps/backend/.data/chromadb/: chroma.sqlite3
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 880e8eba07d0_initial_schema.py  8ce5bc73f974_add_verification_results_table.py  a1b2c3d4e5f6_add_hashed_password.py  b2c3d4e5f6a7_drop_codebase_indexes.py  c3d4e5f6a7b8_widen_github_pr_id_to_bigint.py  d4e5f6a7b8c9_add_code_chunks_table.py  d4e5f6a7b8c9_add_run_role_reviewer.py
apps/backend/scripts/: test_integration.py
apps/backend/src/: celery_app.py  main.py
apps/backend/src/ai/: __init__.py  agent.py  indexing_helpers.py  reviewer.py  runner.py
apps/backend/src/core/: auth.py  config.py  database.py  redaction.py  security.py
apps/backend/src/models/: __init__.py  agent_run.py  agent_run_event.py  code_chunk.py  codebase_index.py  enums.py  file_change.py  github_credential.py  pull_request.py  repository.py  task.py  tool_call.py  usage_record.py  user.py  verification_check.py
apps/backend/src/repositories/: __init__.py  agent_runs.py  dashboard.py  tasks.py
apps/backend/src/routes/: agent_runs.py  auth.py  dashboard.py  feedback.py  github.py  repositories.py  tasks.py  ws.py
apps/backend/src/schemas/: __init__.py  agent_run.py  agent_run_event.py  dashboard.py  diff.py  feedback.py  pull_request.py  repository.py  task.py  tool_call.py  user.py
apps/backend/src/services/: agent_dispatch.py  agent_runner.py  code_chunker.py  code_indexer.py  code_search.py  credentials.py  embedding.py  events.py  github_pr.py  indexing.py  repositories.py  review_dispatch.py  review_runner.py  sandboxing.py
apps/backend/tests/: conftest.py
apps/backend/tests/agent/: test_runner_smoke.py
apps/backend/tests/ai/: test_agent_completion.py  test_command_tools.py  test_file_tools.py  test_git_tools.py  test_patch_file.py  test_rag_tools.py  test_runaway_detector.py  test_shell_security.py
apps/backend/tests/core/: test_config.py  test_redaction.py
apps/backend/tests/repositories/: test_connect_repo.py  test_indexing.py  test_routes.py
(+65 files in other folders)
