[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]
