[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "chromadb>=1.5.8",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "gitpython>=3.1.50",
    "httpx>=0.28.1",
    "langfuse>=4.5.1",
    "openai>=2.36.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pygithub>=2.9.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "scalar-fastapi>=1.8.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
